[tool.poetry]
name = "repl_python3_CNN-Most-Popular-Stocks"
version = "0.1.0"
description = ""
authors = ["SetoKibah <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
